@@ -35,6 +35,32 @@ class WantedFilesPage extends WantedQueryPage {
 		parent::__construct( $name );
 	}
 
+	function getPageHeader() {
+		# Specifically setting to use "Wanted Files" (NS_MAIN) as title, so as to get what
+		# category would be used on main namespace pages, for those tricky wikipedia
+		# admins who like to do {{#ifeq:{{NAMESPACE}}|foo|bar|....}}.
+		$catMessage = wfMessage( 'broken-file-category' )
+			->title( Title::newFromText( "Wanted Files", NS_MAIN ) )
+			->inContentLanguage();
+		
+		if ( !$catMessage->isDisabled() ) {
+			$category = Title::makeTitleSafe( NS_CATEGORY, $catMessage->text() );
+		} else {
+			$category = false;
+		}
+
+		if ( $category ) {
+			return $this
+				->msg( 'wantedfiletext-cat' )
+				->params( $category->getFullText() )
+				->parseAsBlock();
+		} else {
+			return $this
+				->msg( 'wantedfiletext-nocat' )
+				->parseAsBlock();
+		}
+	}
+
 	/**
 	 * KLUGE: The results may contain false positives for files
 	 * that exist e.g. in a shared repo.  Setting this at least
