@@ -110,6 +110,7 @@ production.
 * Added $wgSend404Code, true by default, which can be set to false to send a 
   200 status code instead of 404 for nonexistent articles.
 * (bug 23427) Introduced {{PAGEID}} variable to expose page.page_id
+* (bug 33447) Link to the broken image tracking category from Special:Wantedfiles
 
 === Bug fixes in 1.19 ===
 * $wgUploadNavigationUrl should be used for file redlinks if.
